# noseiquela-orm

./: .coveragerc  .editorconfig  .gitignore  LICENSE  Makefile  README.md  README.pt-br.md  docker-compose.yml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: pypi-release.yml
noseiquela_orm/: __init__.py  client.py  entity.py  fields.py  key.py  properties.py  query.py
noseiquela_orm/utils/: case_style.py
src/noseiquela_orm/: client.py  entity.py  properties.py  query.py
src/noseiquela_orm/types/: base.py  key.py  properties.py
src/noseiquela_orm/utils/: case_style.py  collections.py
tests/unit/: pytest.ini  test_case_style.py  test_client.py  test_collections.py  test_entity.py  test_key.py  utils.py
