[metadata]
name = noseiquela_orm
description = Small and expressive ORM to interact with Google Datastore inspired by Django, Mongo-Engine and Peewee
author = Geraldo Castro
author_email = victormatheuscastro@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
license_file = LICENSE
url = https://github.com/exageraldo/noseiquela-orm
project_urls =
    Bug Tracker = https://github.com/exageraldo/noseiquela-orm/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Database :: Front-Ends
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
package_dir = = src
python_requires = >=3.8
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src
